test/errors/library-error-config-invalid/build.ts
import { runAngularPackageBuilder } from '../../..';

runAngularPackageBuilder( [
	'test/errors/library-error-config-invalid/.angular-package.json'
] ).catch( ( error: Error ) => {
	// Do nothing
} );
